final edits for unit 1 project

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Maddie's web project</title>
+	<title>Maddie's Web Project</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"
 </head>
 <body>
 	<h1>Welcome! Everything is fine.</h1>
-	<p>Testing 1 2 3 </p>
-	<p>For more information, go to <a href="http://www.spektrix.com">spektrix.com</a></p>
+	<h3>This is the website for The Good Place.</h3>
+	<p>For more information, visit <a href="https://www.nbc.com/the-good-place">NBC.</a></p>
 </body>
 </html>
