--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 	<h1>Welcome! Everything is fine.</h1>
+	<img src=images/fork.gif alt="Kristen Forking Bell" title="Where the fork are we">
 	<h3>This is the website for The Good Place.</h3>
+	<p id="paragraph">&hearts; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum &hearts;</p>
+	<hr>
 	<p>For more information, visit <a href="https://www.nbc.com/the-good-place">NBC.</a></p>
 </body>
 </html>
