--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -52,7 +52,7 @@
 	<hr>
 
 	<footer>
-		<p id="NBC">For more information, visit <a href="https://www.nbc.com/the-good-place">NBC</a></p>
+		<p>For more information, visit <a href="https://www.nbc.com/the-good-place">NBC</a></p>
 	</footer>
 
 </body>
