--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Maddie's Web Project</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -19,14 +19,13 @@
 	</header>	
 
 	<main>
-		<h2>How good do you think you are?<h2>
-		<h3> Become better and earn more points towards making it to The Good Place! Here are some ways to earn points on Earth: </h3>
+		<h2>How good do you think you are?</h2>
+		<h3> Become better and earn more points towards making it to <strong>The Good Place!</strong> Here are some ways to earn points on Earth: </h3>
 		<h4>
 			<img src=images/gooddog.jpg alt="a good dog" title="Doggo" class="images"> Pet a dog
 			<img src=images/grandma.jpeg alt="grandma" title="Grandma" class="images"> Call your grandmother
 			<img src=images/vote.png alt="vote" title="Vote" class="images"> Vote
 		</h4>	
-		<br>
 		<h4>Questions? <a href="mailto:janet@thegoodplace.com">Ask Janet</a></h4>
 		<img src=images/janet.jpg alt="Janet" title="Janet" class="images">
 	</main>
